tests/baselines/reference/customMetadataDecorator.importedIdentifier.7.errors.txt
tests/cases/conformance/decorators/decoratorMetadata/main.ts(1,1): error TS2354: This syntax requires an imported helper but module 'foo' cannot be found.


==== tests/cases/conformance/decorators/decoratorMetadata/global.d.ts (0 errors) ====
    declare const dec: any;
==== tests/cases/conformance/decorators/decoratorMetadata/main.ts (1 errors) ====
    @dec
    ~~~~
!!! error TS2354: This syntax requires an imported helper but module 'foo' cannot be found.
    class C {
        @dec x!: number;
    
        constructor(x: number) {}
    
        @dec
        method(@dec x: number): string { return ""; }
    
        @dec
        get accessor(): string { return ""; }
    }
    export {};